# github-release-downloader

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs  models.rs
