[package]
name = "github-release-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
inquire = "0.6.2"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tap = "1.0.1"
ureq = { version = "2.8.0", features = ["json"] }
